--- a/regex/regex1.html
+++ b/regex/regex1.html
@@ -2,6 +2,45 @@
     정규표현식
     ner RegExp() 객체 생성해 사용하거나 /정규식/
 
+      Flag
+    - g : 찾고자 하는 단어를 모든 단락에서 찾아줌 (전역 검색)
+    - g 비활성화 : 찾고자 하는 단어를 맨 처음 것만 찾아줌
+    - i : 대소문자 구별 없이
+    - m : 다중행 검색(^, $ 같이 사용)
+
+    Pattern
+    - ^ : ~로 시작하는
+    - $ : ~로 끝나는
+    - \. : 마침표임을 나타내려면 역슬래시 + 온점 (정규표현식에서 온점은 또다른 의미가 있기 때문)
+    - . : 모든 문자(영어, 한글, 숫자, 공백, 특수문자)와 매칭
+    - [] : 대괄호 안 문자와 매칭
+    - [-] : 범위 ex) [A-Z] A부터 Z까지 
+    - [^] : 포함하지 않는 ex) [^A-Z] A~Z가 아닌 부분 select
+    - () : 괄호 안 문자와 매칭 (Capturing Group) : 패턴이 적용된 결과값을 가리키거나 패턴을 여러 번 적용하는 데 사용 가능
+      ex) (on | ues | rida), (Mon | Tue | Fri)day
+    - (?:) 비캡쳐링 그룹
+
+    수량
+    - * : 0 ~ 무한대
+    - + : 1 ~ 무한대
+    - ? : 0 ~ 1
+    - {숫자} : 숫자만큼만 Select 반복
+    - {숫자1, 숫자2} : 숫자1 ~ 숫자2
+    - {숫자1, } : 숫자1 ~ 무한대 
+      ex) A로 시작하고 B는 안 나와도 되고 무한대로 AB{0, }
+      ex) A로 시작하고 B는 최소 1개 A로 끝나는 AB{1, }A 또는 AB+A
+      ex) A로 시작하고 B는 최소 0개~최대 1개 A로 끝나는 AB{0, 1}A 또는 AB?A
+
+    탐욕적, 적극적 매치 (greedy) : 매치되는 것을 최대한으로 찾음 (* 사용)
+    게으른, 소극적 매치 (lazy) : 매치되는 것을 최소한으로 찾음 (*? 사용)
+
+  - \w(역슬래시 소문자 w) : 영어, 숫자, _(언더바)만 찾음
+  - \W(역슬래시 대문자 W) : 한글, 언더바 제외한 모든 특수문자
+  - \s(역슬래시 소문자 s) : 공백(스페이스바 & Tab)만 찾아줌
+  - \S(역슬래시 대문자 S) : 공백이 아닌 모든 것
+  - \d(역슬래시 소문자 d) : 숫자만
+  - \D(역슬래시 대문자 D) : 숫자를 제외한 모든 것
+
     메소드
     exec() : 일치하는 경우 일치하는 문자열 리턴, 없으면 리턴값 없음
     test() : 일치하는 경우 true, 아니면 false
