--- a/regex/regex3.html
+++ b/regex/regex3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>정규표현식</title>
   </head>
   <body>
     <p>
@@ -24,7 +24,7 @@
         /^[0-9]{2,3}-[0-9]{3,4}-[0-9]{4}$/gm
       */
       let result = document.getElementById("result");
-      result.innerText = p.match(/^d{2,3-\d{3,4}}-\d{4}$/gm);
+      result.innerText = p.match(/^\d{2,3}-\d{3,4}}-\d{4}$/gm);
     </script>
   </body>
 </html>
