--- a/ajax/movie/movie.html
+++ b/ajax/movie/movie.html
@@ -70,8 +70,8 @@
     </form>
 
     <script>
+      /* -------------------------- 오늘 날짜로 초기화 -------------------------- */
       function init() {
-        // 오늘 날짜
         let newDate = new Date();
         let year = newDate.getFullYear();
         let month = newDate.getMonth() + 1;
@@ -91,51 +91,7 @@
 
       init();
 
-      // 영화 상세 정보 출력
-      function show(movieCd) {
-        let url =
-          "http://www.kobis.or.kr/kobisopenapi/webservice/rest/movie/searchMovieInfo.json?key=f5eef3421c602c6cb7ea224104795888&movieCd=" +
-          movieCd;
-        console.log(url);
-
-        fetch(url)
-          .then((response) => {
-            return response.json();
-          })
-          .then((data) => {
-            console.log(data);
-            // 원하는 정보만 추출하기 - 영화제목, 영어제목, 상영시간, 감독, 출연배우
-            let result = "";
-            let element = data.movieInfoResult.movieInfo;
-            result +=
-              "<li>영화 제목 : " +
-              element.movieNm +
-              " (" +
-              element.movieNmEn +
-              ")</li>";
-            result += "<li>상영시간 : " + element.showTm + "분</li>";
-            element.directors.forEach((direc) => {
-              result +=
-                "<li>감독 : " +
-                direc.peopleNm +
-                " (" +
-                direc.peopleNmEn +
-                ")</li>";
-            });
-            element.actors.forEach((act) => {
-              result +=
-                "<li>배우 : " + act.peopleNm + " (" + act.peopleNmEn + ")";
-              result += " - " + act.cast + "役</li>";
-            });
-
-            document.querySelector(".box3").innerHTML = result;
-          })
-          .catch((error) => {
-            console.log(error);
-          });
-      }
-
-      // 영화 리스트
+      /* -------------------------- 영화 목록 -------------------------- */
       function getMovieInfo() {
         let year = document.querySelector("#txtYear").value;
         let month = document.querySelector("#selMon").value;
@@ -188,10 +144,54 @@
           });
       }
 
-      // 확인 버튼 가져온 후 이벤트 연결
+      /* ------------------ 확인 버튼 가져온 후 이벤트 연결 ------------------ */
       document
         .querySelector("[type='button']")
         .addEventListener("click", getMovieInfo);
+
+      /* -------------------------- 영화 상세 정보 -------------------------- */
+      function show(movieCd) {
+        let url =
+          "http://www.kobis.or.kr/kobisopenapi/webservice/rest/movie/searchMovieInfo.json?key=f5eef3421c602c6cb7ea224104795888&movieCd=" +
+          movieCd;
+        console.log(url);
+
+        fetch(url)
+          .then((response) => {
+            return response.json();
+          })
+          .then((data) => {
+            console.log(data);
+            // 원하는 정보만 추출하기 - 영화제목, 영어제목, 상영시간, 감독, 출연배우
+            let result = "";
+            let element = data.movieInfoResult.movieInfo;
+            result +=
+              "<li>영화 제목 : " +
+              element.movieNm +
+              " (" +
+              element.movieNmEn +
+              ")</li>";
+            result += "<li>상영시간 : " + element.showTm + "분</li>";
+            element.directors.forEach((direc) => {
+              result +=
+                "<li>감독 : " +
+                direc.peopleNm +
+                " (" +
+                direc.peopleNmEn +
+                ")</li>";
+            });
+            element.actors.forEach((act) => {
+              result +=
+                "<li>배우 : " + act.peopleNm + " (" + act.peopleNmEn + ")";
+              result += " - " + act.cast + "役</li>";
+            });
+
+            document.querySelector(".box3").innerHTML = result;
+          })
+          .catch((error) => {
+            console.log(error);
+          });
+      }
     </script>
   </body>
 </html>
